# uperf-patch

./: Cargo.toml  README.md  build.sh  format_codes.sh
.github/workflows/: ci.yml
mainpatch/: Cargo.toml
mainpatch/src/: IRemoteService.rs  forward.rs  lib.rs
prebuilt/: inject
prebuilt/uperf/: install.sh  module.prop  uninstall.sh
prebuilt/uperf/common/: post-fs-data.sh  service.sh
prebuilt/uperf/config/: e1080.json  e2100.json  e2200.json  e8890.json  e8895.json  e9810.json  e9820.json  e990.json  gs101.json  mtd1000.json  mtd1200.json  mtd8100.json  mtd9000.json  sdm625.json  sdm660.json  sdm665.json  sdm675.json  sdm695.json  sdm710.json  sdm730.json  sdm750.json  sdm765.json  sdm778.json  sdm780.json  sdm820.json  sdm835.json  sdm845.json  sdm865.json  sdm8g2.json
prebuilt/uperf/script/: initsvc.sh  libcgroup.sh  libcommon.sh  libpowercfg.sh  libsysinfo.sh  libuperf.sh  setup.sh
prepatch/: Cargo.toml
prepatch/src/: lib.rs
src/: forward.rs  lib.rs
